# stable-diffusion-webui

./: .gitignore  flake.nix  pyproject.toml
extensions-builtin/LDSR/: sd_hijack_ddpm_v1.py
modules/: gradio_extensons.py  script_callbacks.py  ui.py
modules/models/diffusion/: ddpm_edit.py
