[tool.ruff]

target-version = "py39"

[tool.ruff.lint]

extend-select = [
  "B",
  "C",
  "I",
  "W",
]

exclude = [
	"extensions",
	"extensions-disabled",
]

ignore = [
	"E501", # Line too long
	"E721", # Do not compare types, use `isinstance`
	"E731", # Do not assign a `lambda` expression, use a `def`
	
	"I001", # Import block is un-sorted or un-formatted
	"C901", # Function is too complex
	"C408", # Rewrite as a literal
	"W605", # invalid escape sequence, messes with some docstrings
]

[tool.ruff.lint.per-file-ignores]
"webui.py" = ["E402"]  # Module level import not at top of file

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.security.HTTPBasic"]

[tool.pytest.ini_options]
base_url = "http://127.0.0.1:7860"

[tool.poetry]
name = "stable-diffusion-webui"
version = "1.10.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "AGPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"

GitPython = "3.1.32"
pillow = "9.5.0"
accelerate = "0.21.0"
blendmodes = "2022"
clean-fid = "0.1.35"
diskcache = "5.6.3"
einops = "0.4.1"
facexlib = "0.3.0"
fastapi = "0.94.0"
gradio = "3.41.2"
httpcore = "0.15"
inflection = "0.5.1"
jsonmerge = "1.8.0"
kornia = "0.6.7"
lark = "1.1.2"
numpy = "1.26.2"
omegaconf = "2.2.3"
open-clip-torch = "2.20.0"
piexif = "1.1.3"
protobuf = "3.20.0"
psutil = "5.9.5"
pytorch_lightning = "1.9.4"
resize-right = "0.0.2"
safetensors = "0.4.2"
scikit-image = "0.21.0"
spandrel = "0.3.4"
spandrel-extra-arches = "0.1.1"
tomesd = "0.1.3"
torchdiffeq = "0.2.3"
torchsde = "0.2.6"
transformers = "4.30.2"
httpx = "0.24.1"
pillow-avif-plugin = "1.4.3"
dctorch = "0.1.2"
clip = "@ git+https://github.com/openai/CLIP.git"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
